tests/NormalTests/paczka1/fuzzy1/53826398.err
Error in line 2: IIJbMsn A334 23,2
Error in line 12: dOrF4Ke S675 -2,6
Error in line 1: dOrF4Ke S675 34,4
Error in line 19: dOrF4Ke A334 77,9
Error in line 22: dOrF4Ke S675 84,5
Error in line 24: dOrF4Ke S82 13,3
